# spellingapp

./: .gitignore  SpellingList.csv  main.py  misspelled_words.json  pyproject.toml  recent_files.json  requirements.txt  review.txt
spellingapp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
