[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spellingapp"
version = "0.1.0"
# Adjust your Python requirement if you want to silence that workspace warning
requires-python = ">=3.10"
dependencies = [
    "kivy",
    "plyer",
    "pyobjus>=1.2.4",
    "pyttsx3",
]

[project.scripts]
# This creates a terminal command 'spellingapp' that runs your Kivy App
spellingapp = "main:SpellingApp.run"

[tool.setuptools.packages.find]
# This tells setuptools to look for main.py right in the root folder, not in a 'src' folder
where = ["."]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
